--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
-SFDC_CLIENT_ID=
-SFDC_SECRET=
-SFDC_ORGANIZATIONID=
-SFDC_SHORTCODE=
-SFDC_SITEID=
+SFDC_CLIENT_ID="aaaaaaa"
+SFDC_SECRET="aaaaaaa"
+SFDC_ORGANIZATIONID="aaaaaaa"
+SFDC_SHORTCODE="aaaaaaa"
+SFDC_SITEID="aaaaaaa"
