--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.0",
+    "next-optimized-images": "^2.6.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "4.8.4"
